--- a/css/eshop.css
+++ b/css/eshop.css
@@ -1,6 +1,7 @@
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  outline: none;
 }
 
 body {
@@ -66,6 +67,10 @@ body {
 }
 
 .head-1 #navbar-1 a:hover {
+  color: white;
+}
+
+.head-1 #navbar-1 a:hover .fas {
   color: white;
 }
 
@@ -223,9 +228,7 @@ body {
   padding: 0 405px;
 }
 
-.part-2 .women,
-.part-2 .accessories,
-.part-2 .men {
+.part-2 .category {
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
@@ -233,17 +236,13 @@ body {
   width: 350px;
 }
 
-.part-2 .women .theme,
-.part-2 .accessories .theme,
-.part-2 .men .theme {
+.part-2 .category .theme {
   position: relative;
   padding: 34% 0;
   text-align: center;
 }
 
-.part-2 .women .theme a,
-.part-2 .accessories .theme a,
-.part-2 .men .theme a {
+.part-2 .category .theme a {
   text-decoration: none;
   color: black;
   text-transform: uppercase;
@@ -329,7 +328,6 @@ tbody td {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 405px;
 }
 
 .part-3 h1,
@@ -380,44 +378,23 @@ tbody td {
   padding: 10px 40px;
 }
 
-.part-3 .goodbox-2,
-.part-5 .goodbox-2,
-.part-6 .goodbox-2 {
-  margin-bottom: 40px;
-}
-
-.part-3 .goodbox-3,
-.part-5 .goodbox-3,
-.part-6 .goodbox-3 {
-  margin-bottom: 30px;
-}
-
-.part-3 .goodbox-1,
-.part-3 .goodbox-2,
-.part-3 .goodbox-3,
-.part-5 .goodbox-1,
-.part-5 .goodbox-2,
-.part-5 .goodbox-3,
-.part-6 .goodbox-1,
-.part-6 .goodbox-2,
-.part-6 .goodbox-3 {
+.part-3 .good-box,
+.part-5 .good-box,
+.part-6 .good-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  width: 1110px;
 }
 
-.part-3 .goodbox-1 .goods,
-.part-3 .goodbox-2 .goods,
-.part-3 .goodbox-3 .goods,
-.part-5 .goodbox-1 .goods,
-.part-5 .goodbox-2 .goods,
-.part-5 .goodbox-3 .goods,
-.part-6 .goodbox-1 .goods,
-.part-6 .goodbox-2 .goods,
-.part-6 .goodbox-3 .goods {
+.part-3 .good-box .goods,
+.part-5 .good-box .goods,
+.part-6 .good-box .goods {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -430,176 +407,60 @@ tbody td {
           justify-content: center;
   text-align: center;
   height: 377px;
+  border: 2px solid transparent;
 }
 
-.part-3 .goodbox-1 .tool-box,
-.part-3 .goodbox-2 .tool-box,
-.part-3 .goodbox-3 .tool-box,
-.part-5 .goodbox-1 .tool-box,
-.part-5 .goodbox-2 .tool-box,
-.part-5 .goodbox-3 .tool-box,
-.part-6 .goodbox-1 .tool-box,
-.part-6 .goodbox-2 .tool-box,
-.part-6 .goodbox-3 .tool-box {
+.part-3 .good-box .goods .cart,
+.part-5 .good-box .goods .cart,
+.part-6 .good-box .goods .cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  visibility: hidden;
+  background-color: #e7484c;
+  height: 40px;
+  border: none;
+}
+
+.part-3 .good-box .goods .cart a,
+.part-5 .good-box .goods .cart a,
+.part-6 .good-box .goods .cart a {
+  color: white;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 600;
+  text-decoration: none;
+  border: none;
+}
+
+.part-3 .good-box .tool-box,
+.part-5 .good-box .tool-box,
+.part-6 .good-box .tool-box {
   position: relative;
   background-repeat: no-repeat;
   background-size: cover;
   height: 235px;
-  width: 220px;
+  width: 235px;
 }
 
-.part-3 .goodbox-1 .pict-1,
-.part-3 .goodbox-2 .pict-1,
-.part-3 .goodbox-3 .pict-1,
-.part-5 .goodbox-1 .pict-1,
-.part-5 .goodbox-2 .pict-1,
-.part-5 .goodbox-3 .pict-1,
-.part-6 .goodbox-1 .pict-1,
-.part-6 .goodbox-2 .pict-1,
-.part-6 .goodbox-3 .pict-1 {
-  background-image: url("../img/product_1.png");
-}
-
-.part-3 .goodbox-1 .pict-2,
-.part-3 .goodbox-2 .pict-2,
-.part-3 .goodbox-3 .pict-2,
-.part-5 .goodbox-1 .pict-2,
-.part-5 .goodbox-2 .pict-2,
-.part-5 .goodbox-3 .pict-2,
-.part-6 .goodbox-1 .pict-2,
-.part-6 .goodbox-2 .pict-2,
-.part-6 .goodbox-3 .pict-2 {
-  background-image: url("../img/product_2.png");
-  border-left: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
-}
-
-.part-3 .goodbox-1 .pict-3,
-.part-3 .goodbox-2 .pict-3,
-.part-3 .goodbox-3 .pict-3,
-.part-5 .goodbox-1 .pict-3,
-.part-5 .goodbox-2 .pict-3,
-.part-5 .goodbox-3 .pict-3,
-.part-6 .goodbox-1 .pict-3,
-.part-6 .goodbox-2 .pict-3,
-.part-6 .goodbox-3 .pict-3 {
-  background-image: url("../img/product_3.png");
-}
-
-.part-3 .goodbox-1 .pict-4,
-.part-3 .goodbox-2 .pict-4,
-.part-3 .goodbox-3 .pict-4,
-.part-5 .goodbox-1 .pict-4,
-.part-5 .goodbox-2 .pict-4,
-.part-5 .goodbox-3 .pict-4,
-.part-6 .goodbox-1 .pict-4,
-.part-6 .goodbox-2 .pict-4,
-.part-6 .goodbox-3 .pict-4 {
-  background-image: url("../img/product_4.png");
-  border-left: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
-}
-
-.part-3 .goodbox-1 .pict-5,
-.part-3 .goodbox-2 .pict-5,
-.part-3 .goodbox-3 .pict-5,
-.part-5 .goodbox-1 .pict-5,
-.part-5 .goodbox-2 .pict-5,
-.part-5 .goodbox-3 .pict-5,
-.part-6 .goodbox-1 .pict-5,
-.part-6 .goodbox-2 .pict-5,
-.part-6 .goodbox-3 .pict-5 {
-  background-image: url("../img/product_5.png");
-}
-
-.part-3 .goodbox-1 .pict-6,
-.part-3 .goodbox-2 .pict-6,
-.part-3 .goodbox-3 .pict-6,
-.part-5 .goodbox-1 .pict-6,
-.part-5 .goodbox-2 .pict-6,
-.part-5 .goodbox-3 .pict-6,
-.part-6 .goodbox-1 .pict-6,
-.part-6 .goodbox-2 .pict-6,
-.part-6 .goodbox-3 .pict-6 {
-  background-image: url("../img/product_6.png");
-}
-
-.part-3 .goodbox-1 .pict-7,
-.part-3 .goodbox-2 .pict-7,
-.part-3 .goodbox-3 .pict-7,
-.part-5 .goodbox-1 .pict-7,
-.part-5 .goodbox-2 .pict-7,
-.part-5 .goodbox-3 .pict-7,
-.part-6 .goodbox-1 .pict-7,
-.part-6 .goodbox-2 .pict-7,
-.part-6 .goodbox-3 .pict-7 {
-  background-image: url("../img/product_7.png");
-  border-left: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
-}
-
-.part-3 .goodbox-1 .pict-8,
-.part-3 .goodbox-2 .pict-8,
-.part-3 .goodbox-3 .pict-8,
-.part-5 .goodbox-1 .pict-8,
-.part-5 .goodbox-2 .pict-8,
-.part-5 .goodbox-3 .pict-8,
-.part-6 .goodbox-1 .pict-8,
-.part-6 .goodbox-2 .pict-8,
-.part-6 .goodbox-3 .pict-8 {
-  background-image: url("../img/product_8.png");
-}
-
-.part-3 .goodbox-1 .pict-9,
-.part-3 .goodbox-2 .pict-9,
-.part-3 .goodbox-3 .pict-9,
-.part-5 .goodbox-1 .pict-9,
-.part-5 .goodbox-2 .pict-9,
-.part-5 .goodbox-3 .pict-9,
-.part-6 .goodbox-1 .pict-9,
-.part-6 .goodbox-2 .pict-9,
-.part-6 .goodbox-3 .pict-9 {
-  background-image: url("../img/product_9.png");
-  border-left: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
-}
-
-.part-3 .goodbox-1 .pict-10,
-.part-3 .goodbox-2 .pict-10,
-.part-3 .goodbox-3 .pict-10,
-.part-5 .goodbox-1 .pict-10,
-.part-5 .goodbox-2 .pict-10,
-.part-5 .goodbox-3 .pict-10,
-.part-6 .goodbox-1 .pict-10,
-.part-6 .goodbox-2 .pict-10,
-.part-6 .goodbox-3 .pict-10 {
-  background-image: url("../img/product_10.png");
-}
-
-.part-3 .goodbox-1 .description p,
-.part-3 .goodbox-2 .description p,
-.part-3 .goodbox-3 .description p,
-.part-5 .goodbox-1 .description p,
-.part-5 .goodbox-2 .description p,
-.part-5 .goodbox-3 .description p,
-.part-6 .goodbox-1 .description p,
-.part-6 .goodbox-2 .description p,
-.part-6 .goodbox-3 .description p {
+.part-3 .good-box .description p,
+.part-5 .good-box .description p,
+.part-6 .good-box .description p {
   color: black;
   font-size: 14px;
   font-weight: 500;
   margin-bottom: 10px;
 }
 
-.part-3 .goodbox-1 .description .values,
-.part-3 .goodbox-2 .description .values,
-.part-3 .goodbox-3 .description .values,
-.part-5 .goodbox-1 .description .values,
-.part-5 .goodbox-2 .description .values,
-.part-5 .goodbox-3 .description .values,
-.part-6 .goodbox-1 .description .values,
-.part-6 .goodbox-2 .description .values,
-.part-6 .goodbox-3 .description .values {
+.part-3 .good-box .description .values,
+.part-5 .good-box .description .values,
+.part-6 .good-box .description .values {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -610,80 +471,21 @@ tbody td {
   font-weight: 500;
 }
 
-.part-3 .goodbox-1 .description .values h4,
-.part-3 .goodbox-2 .description .values h4,
-.part-3 .goodbox-3 .description .values h4,
-.part-5 .goodbox-1 .description .values h4,
-.part-5 .goodbox-2 .description .values h4,
-.part-5 .goodbox-3 .description .values h4,
-.part-6 .goodbox-1 .description .values h4,
-.part-6 .goodbox-2 .description .values h4,
-.part-6 .goodbox-3 .description .values h4 {
+.part-3 .good-box .description .values h4,
+.part-5 .good-box .description .values h4,
+.part-6 .good-box .description .values h4 {
   color: #e7484c;
   font-weight: 600;
   margin: 0px;
   padding-right: 8px;
 }
 
-.part-3 .goodbox-1 .description .values span,
-.part-3 .goodbox-2 .description .values span,
-.part-3 .goodbox-3 .description .values span,
-.part-5 .goodbox-1 .description .values span,
-.part-5 .goodbox-2 .description .values span,
-.part-5 .goodbox-3 .description .values span,
-.part-6 .goodbox-1 .description .values span,
-.part-6 .goodbox-2 .description .values span,
-.part-6 .goodbox-3 .description .values span {
+.part-3 .good-box .description .values span,
+.part-5 .good-box .description .values span,
+.part-6 .good-box .description .values span {
   color: #b5aec3;
   font-size: 12px;
   margin-top: 4px;
-}
-
-.part-3 .goodbox-1 .wall,
-.part-3 .goodbox-2 .wall,
-.part-3 .goodbox-3 .wall,
-.part-5 .goodbox-1 .wall,
-.part-5 .goodbox-2 .wall,
-.part-5 .goodbox-3 .wall,
-.part-6 .goodbox-1 .wall,
-.part-6 .goodbox-2 .wall,
-.part-6 .goodbox-3 .wall {
-  border-left: 1px solid #ebebeb;
-  border-right: 1px solid #ebebeb;
-}
-
-.part-3 .goodbox-1 .cart,
-.part-3 .goodbox-2 .cart,
-.part-3 .goodbox-3 .cart,
-.part-5 .goodbox-1 .cart,
-.part-5 .goodbox-2 .cart,
-.part-5 .goodbox-3 .cart,
-.part-6 .goodbox-1 .cart,
-.part-6 .goodbox-2 .cart,
-.part-6 .goodbox-3 .cart {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  visibility: hidden;
-  background-color: #e7484c;
-  height: 40px;
-}
-
-.part-3 .goodbox-1 .cart a,
-.part-3 .goodbox-2 .cart a,
-.part-3 .goodbox-3 .cart a,
-.part-5 .goodbox-1 .cart a,
-.part-5 .goodbox-2 .cart a,
-.part-5 .goodbox-3 .cart a,
-.part-6 .goodbox-1 .cart a,
-.part-6 .goodbox-2 .cart a,
-.part-6 .goodbox-3 .cart a {
-  color: white;
-  text-transform: uppercase;
-  font-size: 13px;
-  font-weight: 600;
-  text-decoration: none;
-  padding: 10px 0 0 70px;
 }
 
 .part-3 .goods:hover,
@@ -699,6 +501,19 @@ tbody td {
 .part-5 .goods:hover .cart,
 .part-6 .goods:hover .cart {
   visibility: visible;
+}
+
+.part-3 .good-box::after,
+.part-5 .good-box::after,
+.part-6 .good-box::after {
+  content: "";
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 47.7%;
+          flex: 0 1 47.7%;
+}
+
+.part-3 {
+  padding-bottom: 40px;
 }
 
 .part-3 .line {
@@ -801,10 +616,7 @@ tbody td {
   margin-bottom: 80px;
 }
 
-.part-5 .conditions .shipping,
-.part-5 .conditions .delivery,
-.part-5 .conditions .return,
-.part-5 .conditions .opening {
+.part-5 .conditions .condition {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -820,30 +632,18 @@ tbody td {
   margin-left: 1px;
 }
 
-.part-5 .conditions .shipping .far,
-.part-5 .conditions .shipping .fas,
-.part-5 .conditions .delivery .far,
-.part-5 .conditions .delivery .fas,
-.part-5 .conditions .return .far,
-.part-5 .conditions .return .fas,
-.part-5 .conditions .opening .far,
-.part-5 .conditions .opening .fas {
+.part-5 .conditions .condition .far,
+.part-5 .conditions .condition .fas {
   color: #e7484c;
   font-size: 30px;
 }
 
-.part-5 .conditions .shipping .info,
-.part-5 .conditions .delivery .info,
-.part-5 .conditions .return .info,
-.part-5 .conditions .opening .info {
+.part-5 .conditions .condition .info {
   position: relative;
   padding-left: 22px;
 }
 
-.part-5 .conditions .shipping .info a,
-.part-5 .conditions .delivery .info a,
-.part-5 .conditions .return .info a,
-.part-5 .conditions .opening .info a {
+.part-5 .conditions .condition .info a {
   margin: 0px;
   color: black;
   text-decoration: none;
@@ -852,10 +652,7 @@ tbody td {
   font-weight: 500;
 }
 
-.part-5 .conditions .shipping .info p,
-.part-5 .conditions .delivery .info p,
-.part-5 .conditions .return .info p,
-.part-5 .conditions .opening .info p {
+.part-5 .conditions .condition .info p {
   margin: 0px;
   font-size: 12px;
 }
@@ -986,53 +783,53 @@ tbody td {
   font-weight: 500;
 }
 
-.footer-1 .payment {
+.footer-1 .confirm {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin: 0px;
   padding: 0px;
-  font-weight: 900;
 }
 
-.footer-1 .payment input,
-.footer-1 .payment button {
+.footer-1 .confirm input,
+.footer-1 .confirm button {
   font-size: 14px;
   border: none;
-  font-weight: 600;
 }
 
-.footer-1 .payment input {
+.footer-1 .confirm input {
   color: black;
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
-  width: 300px;
-  padding: 15px 0 15px 15px;
+  font-size: 14px;
+  width: 350px;
+  padding: 10px 0 10px 10px;
 }
 
-.footer-1 .payment input .text::-webkit-input-placeholder {
+.footer-1 .confirm input .text::-webkit-input-placeholder {
   color: lightgrey;
 }
 
-.footer-1 .payment input .text:-ms-input-placeholder {
+.footer-1 .confirm input .text:-ms-input-placeholder {
   color: lightgrey;
 }
 
-.footer-1 .payment input .text::-ms-input-placeholder {
+.footer-1 .confirm input .text::-ms-input-placeholder {
   color: lightgrey;
 }
 
-.footer-1 .payment input .text::placeholder {
+.footer-1 .confirm input .text::placeholder {
   color: lightgrey;
 }
 
-.footer-1 .payment button {
+.footer-1 .confirm button {
   background-color: #e7484c;
-  width: 160px;
+  width: 60px;
   color: white;
   text-transform: uppercase;
   text-decoration: none;
   cursor: pointer;
+  font-size: 20px;
 }
 
 .footer-2 {
