--- a/css/eshop.scss
+++ b/css/eshop.scss
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    outline: none; //vsetky objekty na kt. sa klikne nebudu mat modry ranik
 }
 
 body {
@@ -33,7 +34,7 @@ body {
         margin: 0 auto;
         background-color: black;
         list-style-type: none;
-        & a {
+        a {
             text-decoration: none;
             padding: 7px 20px;
             color: rgb(140, 140, 140);
@@ -46,6 +47,9 @@ body {
         }
         a:hover {
             color: white;
+            .fas{
+                color:white;
+            }
         }
     }
 }
@@ -155,9 +159,7 @@ body {
     height: 265px;
     margin: 30px 0 70px 0;
     padding: 0 405px;
-    .women,
-    .accessories,
-    .men {
+    .category {
         position: relative;
         background-repeat: no-repeat;
         background-size: cover;
@@ -289,7 +291,7 @@ tbody td {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 405px;
+   
     h1 {
         margin: 20px 0 20px 0; //pridal som margin-top: 20px;
         padding: 0px;
@@ -321,68 +323,43 @@ tbody td {
             }
         }
     }
-    .goodbox-2 {
-        margin-bottom: 40px;
-    }
-    .goodbox-3 {
-        margin-bottom: 30px;
-    }
-    .goodbox-1,
-    .goodbox-2,
-    .goodbox-3 {
+    
+    .good-box {
         display: flex;
+        flex-wrap:wrap;
         justify-content: space-between;
+        width:1110px;
         .goods {
             display: flex;
             flex-direction: column;
             justify-content: center;
             text-align: center;
             height: 377px;
+            border:2px solid transparent;
+            .cart {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                visibility:hidden;
+                background-color: rgb(231, 72, 76);
+                height: 40px;
+                border:none;
+                & a {
+                    color: white;
+                    text-transform: uppercase;
+                    font-size: 13px;
+                    font-weight: 600;
+                    text-decoration: none;
+                    border:none;
+                }
+            }
         }
         .tool-box {
             position: relative;
             background-repeat: no-repeat;
             background-size: cover;
             height: 235px;
-            width: 220px;
-        }
-        .pict-1 {
-            background-image: url("../img/product_1.png");
-        }
-        .pict-2 {
-            background-image: url("../img/product_2.png");
-            border-left: 1px solid rgb(235, 235, 235);
-            border-right: 1px solid rgb(235, 235, 235);
-        }
-        .pict-3 {
-            background-image: url("../img/product_3.png");
-        }
-        .pict-4 {
-            background-image: url("../img/product_4.png");
-            border-left: 1px solid rgb(235, 235, 235);
-            border-right: 1px solid rgb(235, 235, 235);
-        }
-        .pict-5 {
-            background-image: url("../img/product_5.png");
-        }
-        .pict-6 {
-            background-image: url("../img/product_6.png");
-        }
-        .pict-7 {
-            background-image: url("../img/product_7.png");
-            border-left: 1px solid rgb(235, 235, 235);
-            border-right: 1px solid rgb(235, 235, 235);
-        }
-        .pict-8 {
-            background-image: url("../img/product_8.png");
-        }
-        .pict-9 {
-            background-image: url("../img/product_9.png");
-            border-left: 1px solid rgb(235, 235, 235);
-            border-right: 1px solid rgb(235, 235, 235);
-        }
-        .pict-10 {
-            background-image: url("../img/product_10.png");
+            width: 235px;
         }
         .description {
             p {
@@ -409,24 +386,8 @@ tbody td {
                 }
             }
         }
-        .wall {
-            border-left: 1px solid rgb(235, 235, 235);
-            border-right: 1px solid rgb(235, 235, 235);
-        }
-        .cart {
-            display: flex;
-            visibility: hidden;
-            background-color: rgb(231, 72, 76);
-            height: 40px;
-            & a {
-                color: white;
-                text-transform: uppercase;
-                font-size: 13px;
-                font-weight: 600;
-                text-decoration: none;
-                padding: 10px 0 0 70px;
-            }
-        }
+      
+      
     }
     .goods:hover {
         cursor: pointer;
@@ -436,9 +397,15 @@ tbody td {
             visibility: visible;
         }
     }
+    .good-box::after { //posunie poslednú položku toparu pri vykreslení doľava(na začiatok, aby nesotala medzi tovarom medzera)
+        content:"";
+        flex:0 1 47.7%; 
+    }
 }
 
 .part-3 {
+    //background-color: rgb(242, 242, 242);
+    padding-bottom:40px;
     .line {
         margin-bottom: 40px;
     }
@@ -511,10 +478,7 @@ tbody td {
         width: 100%;
         height: 100px;
         margin-bottom: 80px;
-        .shipping,
-        .delivery,
-        .return,
-        .opening {
+        .condition {
             display: flex;
             justify-content: flex-start;
             align-items: center;
@@ -642,34 +606,36 @@ tbody td {
             font-weight: 500;
         }
     }
-    .payment {
+    .confirm {
         display: flex;
         margin: 0px;
         padding: 0px;
-        font-weight: 900;
+        //font-weight: 900;
         & input,
         button {
             font-size: 14px;
             border: none;
-            font-weight: 600;
+           
         }
         & input {
             color: black;
             font-family: 'Poppins', sans-serif;
             font-weight: 600;
-            width: 300px;
-            padding: 15px 0 15px 15px;
+            font-size: 14px;
+            width: 350px;
+            padding: 10px 0 10px 10px;
             .text::placeholder {
                 color: lightgrey;
             }
         }
         button {
             background-color: rgb(231, 72, 76);
-            width: 160px;
+            width: 60px;
             color: white;
             text-transform: uppercase;
             text-decoration: none;
             cursor: pointer;
+            font-size:20px;
         }
     }
 }
